<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jCard</string>
    <string name="action_settings">Settings</string>
    <string name="jCard_welcome">Welcome to jCard</string>
    
    <string name="enter_pin">PIN</string>
    <string name="set_pin">Set new PIN</string>
    <string name="set_pin_success">Successfully set</string>
    
    <string name="actual_pace_config">Your actual PACE configuration: </string>
    <string name="actual_pace_config_algorithm">Algorithm: </string>
    <string name="actual_pace_config_sdp">Standardized domain paramater id: </string>
    <string name="actual_pace_config_can">Actual usable CAN: </string>
    <string name="information">Information</string>
    <string name="chose_dp_and_alg_first">Please chose domain parameter and algorithm at first!</string>
    <string name="config_app_first">Please configure application first!</string>
    <string name="log">Log</string>
    <string name="no_log_entries_availabe">No log entries available</string>
    <string name="config_applications">Configure applications</string>
    <string name="start_application_error_config_mode">Could not start application in config mode</string>
    <string name="settings">Settings</string>
    <string name="running_error">Error while runtime! See log for further information!</string>
    <string name="authentication">Authentication</string>
    <string name="authentication_protcol">Authentication protocol</string>
    <string name="pace">PACE</string>
    <string name="domain_parameter_title">Standardized domain parameters</string>
    <string name="domain_parameter_summary">Please chose a specific domain paramater</string>

    <string-array name="domain_parameters">
        <item name="1">1024-bit MODP Group with 160-bit Prime Order Subgroup</item>
        <item name="4">NIST P-192 (secp192r1)</item>
        <item name="5">BrainpoolP192r1</item>
        <item name="6">NIST P-224 (secp224r1)</item>
        <item name="7">BrainpoolP224r1</item>
        <item name="8">NIST P-256 (secp256r1)</item>
        <item name="9">BrainpoolP256r1</item>
        <item name="10">BrainpoolP320r1</item>
        <item name="11">NIST P-384 (secp384r1)</item>
        <item name="12">BrainpoolP384r1</item>
        <item name="13">BrainpoolP512r1</item>
        <item name="14">NIST P-521 (secp521r1)</item>
    </string-array>
    <string-array name="domain_parameters_values">
        <item name="1">0</item>
        <item name="4">8</item>
        <item name="5">9</item>
        <item name="6">10</item>
        <item name="7">11</item>
        <item name="8">12</item>
        <item name="9">13</item>
        <item name="10">14</item>
        <item name="11">15</item>
        <item name="12">16</item>
        <item name="13">17</item>
        <item name="14">18</item>
    </string-array>

    <string name="algorithms_title">Algorithms</string>
    <string name="algorithms_summary">Please chose an algorithm</string>

    <string-array name="algorithms">
        <item name="1">3DES (112 Bit) CBC/CBC</item>
        <item name="2">AES  (128 Bit) CBC/CMAC</item>
        <item name="3">AES  (192 Bit) CBC/CMAC</item>
        <item name="4">AES  (256 Bit) CBC/CMAC</item>
    </string-array>
    <string-array name="algorithms_values">
        <item name="1">112</item>
        <item name="2">128</item>
        <item name="3">192</item>
        <item name="4">256</item>
    </string-array>

    <string name="prepare_secure_connection">Prepare secure connection ...</string>
    <string name="class_started_in_config_mode">Class startet in configuration mode</string>
    <string name="class_started_in_active_mode">Class startet in active mode</string>
    <string name="title_activity_PKI">PKI Applet Emulator</string>
    <string name="menu_settings">Settings</string>
    <string name="applet_initialized">PKI applet initialized.</string>
    <string name="applet_not_initialized">PKI applet NOT initialized. Install key and set PIN.</string>
    <string name="place_on_reader">Start PKI client on host and place on reader.</string>
    <string name="title_activity_log">Log entries</string>
    <string name="title_activity_settings">Settings</string>
    

</resources>