<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainScreen" >

    <TextView
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_alignParentTop="true"
         android:text="@string/jCard_welcome" 
         android:textAppearance="@android:style/TextAppearance.Large"/>
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="25sp"
                android:text="@string/actual_pace_config"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/tv_config_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:text="@string/actual_pace_config_algorithm"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/tv_config_sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="25sp"
                android:text="@string/actual_pace_config_sdp"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/tv_config_can_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="25sp"
                android:text="@string/actual_pace_config_can"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/tv_config_can"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="5sp"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

	        <EditText
	            android:id="@+id/et_pin"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/enter_pin"
	            android:inputType="numberPassword" >
	            <requestFocus />
       		</EditText>
        
            <Button
                android:id="@+id/b_enter_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:text="@string/set_pin"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>